--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,9 @@ html, body {
 .cliente-logo {
     height: 140px;
     background: url("../img/logo.png") no-repeat;
-    background-size: contain;
+    background-size: 90%;
     background-position: 50%;
-    background-color: white;
+    background-color: #e6e6e6;
     box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
 }
